@@ -11,11 +11,14 @@ iRedMail-1.3:
         + Enable SOGo for CentOS 8 and Ubuntu 20.04. Thanks to SOGo team.
 
     * Fixed issues:
+        - Enable TLSv1 on CentOS 7 due to the php package doesn't support TLSv1.2.
+        - Fix incorrect permission of Fail2ban log file, should be 0755 so
+          that netdata can read banned/unbanned info.
         - Add missing INDEX for SQL column `msgs.time_iso` in `amavisd`
           database.
 
     * Updated packages:
-        + Roundcube webmail -> 1.4.5, it includes 4 security fixes.
+        + Roundcube webmail -> 1.4.6, it includes few security fixes.
         + netdata -> 1.22.1
 
 iRedMail-1.2.1:
